# lxl_cpp

./: .gitignore  CMakeLists.txt  README.md
client/game_card/: .gitignore  GlobalSuppressions.cs
cmake/: AddLibarary.cmake  AllInclude.cmake  Define.cmake  Libs.cmake  StaticLib.cmake  Utils.cmake
cmake/test/: test_macro.cmake
cmds/: do.bat  run_auth.bat  run_avatar.bat  run_cmd_format.txt  run_connect.bat  run_gate.bat  run_listen.bat  run_platform.bat  run_sidecar.bat
datas/for_test/: setting.xml
datas/proto/: client_gate.pb  gate.pb  login.pb  match.pb  test_pb.txt  test_sproto.txt  zone_service_rpc.pb
datas/setting/: all_service_config.xml  all_services.xml  auth.xml  avatar.xml  avatar_0.xml  game_0.xml  login_0.xml  match_0.xml  platform.xml  world_0.xml  zone_services.xml
lua53/: CMakeLists.txt
lua53/lib/: CMakeLists.txt  lapi.c  ldblib.c  lfunc.h  luaconf.h
lua53/lua/: CMakeLists.txt
lua53/luac/: CMakeLists.txt
lua_5.3.4/: CMakeLists.txt
lua_5.3.4/code_liblua/: CMakeLists.txt
lua_5.3.4/code_lua/: CMakeLists.txt
lua_5.3.4/code_luac/: CMakeLists.txt
lua_53/code_lua/: CMakeLists.txt
lua_libs/: CMakeLists.txt
lua_libs/lpeg/: CMakeLists.txt  lpeg_export.h
lua_libs/pb/: CMakeLists.txt
lua_libs/sproto2/: CMakeLists.txt  sproto.h
lua_libs/try_use_lualib/: CMakeLists.txt  try_use_lualib.cpp  try_use_lualib.h
lua_script/: c_search_paths.lua  lua_search_paths.lua  main.lua  pre_require_files.lua  prepare_env.lua  require_files.lua  test_lrdb.lua
lua_script/common/: error_handler.lua  init_global_vars.lua  log.lua
lua_script/entrance/: for_test.lua
lua_script/fake_api/: native.lua
lua_script/libs/: class.lua  functional.lua  hotfix - 副本.lua  hotfix.lua  path_ext.lua  print_ext.lua  random.lua  reload.lua  serpent.lua  string_ext.lua  table_ext.lua  type_check.lua
lua_script/services/: main.lua  service_base.lua  service_base_bakup.lua  service_def.lua  service_main_example.lua
lua_script/try_use_lualibs/: try_use_lualibs.lua
lua_script/util/: util.lua
lua_service/: CMakeLists.txt
lua_service/engine/: CMakeLists.txt  engine.cpp  i_service.h  iengine.h
lua_service/engine/common/cross_platform/: cross_platform_adapter.cpp  cross_platform_adapter.h  linux_platform_adapter.cpp
lua_service/engine/common/task/: async_task_mgr.cpp
lua_service/engine/coroutine/: coro.cpp  coro.h  coro.hpp  coro_def.h  coro_mgr.cpp  coro_mgr.h
lua_service/engine/dns/: dns_def.h  dns_service.cpp  dns_service.h
lua_service/engine/framework/log/: log_module.cpp  log_module.h
lua_service/engine/framework/module_def/: i_module.h  module_mgr.cpp  module_mgr.h
lua_service/engine/framework/network/: i_network_handler.h  i_network_module.h
lua_service/engine/framework/network/Impl/: i_net_worker.h  net_task.h  net_worker.cpp  net_worker.h  net_worker_select.cpp  net_worker_select.h  network_module.cpp  network_module.h
lua_service/engine/framework/timer/: i_timer_module.h  timer_def.h  timer_mgr.cpp  timer_module.cpp  timer_module.h
lua_service/engine/http/: http_client_mgr.cpp  http_client_mgr.h
lua_service/engine/log/: log_mgr.cpp  log_mgr.h
lua_service/engine/memory_pool/: MemoryPool.cpp  MemoryPoolMgr.cpp
lua_service/engine/module_def/: i_module.h  module_mgr.cpp  module_mgr.h
lua_service/engine/mongo/: mongo_def.cpp  mongo_def.h  mongo_options.cpp  mongo_result.cpp  mongo_result.h  mongo_task.cpp  mongo_task.h  mongo_task_mgr.cpp  mongo_task_mgr.h
lua_service/engine/net_handler/: common_cnn_handler.cpp  common_cnn_handler.h  common_listener.cpp  common_listener.h  http_req_cnn.cpp  http_req_cnn.h  http_rsp_cnn.cpp  http_rsp_cnn.h  net_handler_map.h
lua_service/engine/network/: i_network_handler.h  i_network_module.h  network_def.h
lua_service/engine/network/Impl/: i_net_worker.h  net_task.cpp  net_task.h  net_worker.cpp  net_worker_select.cpp  net_worker_select.h  network_module.cpp  network_module.h
lua_service/engine/redis/: redis_def.cpp  redis_def.h  redis_task_mgr.cpp  redis_task_mgr.h
lua_service/engine/server_logic/: ServerLogic.cpp  ServerLogic.h
lua_service/engine/timer/: timer_mgr.cpp  timer_mgr.h
lua_service/service/: CMakeLists.txt  main.cpp
lua_service/service/etcd_client/: etcd_client.cpp  etcd_client.h  i_etcd_client.h
lua_service/service/lua_reg/: lua_reg.cpp  lua_reg.h  lua_reg_mongo.cpp  lua_reg_net.cpp  lua_reg_redis.cpp  lua_reg_sharedptr.cpp
lua_service/service/main_impl/: main_impl.cpp  main_impl.h  main_impl_lua.cpp
lua_service/service/net/: accept_cnn_handler_mgr.h  active_cnn_handler_mgr.cpp  active_cnn_handler_mgr.h  common_cnn_handler.cpp  common_cnn_handler.h  common_listener.cpp  http_req_cnn.cpp  http_req_cnn.h  http_rsp_cnn.cpp  http_rsp_cnn.h  http_rsp_cnn_mgr.cpp  http_rsp_cnn_mgr.h  lua_http_rsp_cnn.cpp  lua_http_rsp_cnn.h  lua_tcp_connect.cpp  lua_tcp_connect.h  lua_tcp_connection.cpp  lua_tcp_connection.h  lua_tcp_listen.cpp  lua_tcp_listen.h  net_proto_splitter.cpp  net_proto_splitter.h
lua_service/service/net_handler/: lua_tcp_connect.cpp  lua_tcp_connect.h  lua_tcp_listen.cpp  lua_tcp_listen.h  net_handler_map.h  net_proto_splitter.cpp
lua_service/service/service_imp/: service_base.cpp  service_base.h
lua_service/service/service_imp/pure_lua_service/: pure_lua_service.cpp  pure_lua_service.h
lua_service/service/service_impl/: service_base.cpp  service_base.h
lua_service/service/service_impl/pure_lua_service/: pure_lua_service.cpp
lua_service/service/service_impl/sidecar_service/: sidecar_service.cpp
luas/: CMakeLists.txt
luas/lrdb_lua/: CMakeLists.txt  lrdb_lua.cpp
luas/lua_53/: CMakeLists.txt
luas/lua_53/code_liblua/: CMakeLists.txt
luas/lua_53/code_luac/: CMakeLists.txt
luas/lua_libs/: CMakeLists.txt
luas/lua_libs/sproto2/: CMakeLists.txt  sproto.h
luas/lua_libs/try_use_lualib/: CMakeLists.txt
pycode/: auto_build.py  win_run_open_room.py
pycode/run_service/: __init__.py  (+2 more)
server/: .gitignore  CMakeLists.txt
server/test_code/test_define/: CMakeLists.txt  test_define.cpp
test/: CMakeLists.txt  test_main.cpp
test_code/: CMakeLists.txt
(+1549 files in other folders)
