cmake_minimum_required(VERSION 2.6)

INCLUDE(${CMAKE_SOURCE_DIR}/cmake/Utils.cmake)

PROJECT(lxl_cpp)

OPTION(address "hello world" ON)
SET(OPT2 "Default" CACHE STRING "Helpstring")

IF (NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE Debug CACHE STRING "set Debug or Release")
ENDIF()

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/third_party)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/third_party/rapidjson)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/third_party/data_struct)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR})


SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}) 
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}) 
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})


#set(CMAKE_CXX_FLAGS "-std=c++14 ${CMAKE_CXX_FLAGS}")

ADD_COMPILE_OPTIONS(-DSOL_CHECK_ARGUMENTS=1)

IF (WIN32)
	ADD_COMPILE_OPTIONS(/wd4018)
	ADD_COMPILE_OPTIONS(-D_CRT_SECURE_NO_WARNINGS -D_WINSOCK_DEPRECATED_NO_WARNINGS)
	set(CMAKE_CXX_FLAGS "-std=c++14 ${CMAKE_CXX_FLAGS}")
	#set(CMAKE_C_FLAGS "-std=c++14 ${CMAKE_C_FLAGS}")
ELSE()
	ADD_COMPILE_OPTIONS(-g)
	#set(CMAKE_C_FLAGS "-std=c++17 ${CMAKE_C_FLAGS}")
	set(CMAKE_CXX_FLAGS "-std=c++17 ${CMAKE_CXX_FLAGS}")
ENDIF(WIN32)

ADD_SUBDIRECTORY(test_code) 
ADD_SUBDIRECTORY(lua53)
ADD_SUBDIRECTORY(lua_libs)
ADD_SUBDIRECTORY(third_party)
ADD_SUBDIRECTORY(lua_service)

#INCLUDE(${CMAKE_SOURCE_DIR}/cmake/test/test_macro.cmake)
#INCLUDE(${CMAKE_SOURCE_DIR}/cmake/test/test_cmake_opt_D.cmake)



